# kopperman

./: README.md  Update.md
.idx/: dev.nix
kopperman_prover/compiler/: Main.hs
kopperman_prover/runtime/: Cargo.toml
kopperman_prover/runtime/src/: collab.rs  kernel.rs  loader.rs  main.rs  verifier.rs
kopperman_prover/schema/: protocol.fbs
kopperman_prover/theory/: ast.dhall  hilbert.dhall  proof.dhall
